@@ -1,2 +1,0 @@
-Site URL: https://www.bubbaporn.com/
-DMCA: https://www.bubbaporn.com/dmca/
