@@ -1,2 +1,0 @@
-Site URL: https://www.cambro.tv/
-DMCA: https://www.cambro.tv/dmca/
