@@ -1,3 +1,0 @@
-Site URL: https://www.yespornplease.sexy/
-Contact: https://www.yespornplease.sexy/contact
-DMCA: admin@yespornplease.sexy
