@@ -5,3 +5,6 @@
 - justporn - fix site
 - porndig - fix thumbnails
 - porn1hu - fix site
+- bubaporn - site removed
+- cambro - site removed
+- yespornplease - site removed
